@startuml

title __TENTH's Class Diagram__\n

  namespace cn.shui.learning_plan.datastruct_basic.tenth {
    class cn.shui.learning_plan.datastruct_basic.tenth.L142 {
        + detectCycle1()
        + detectCycle2()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct_basic.tenth {
    class cn.shui.learning_plan.datastruct_basic.tenth.L142.ListNode {
        ~ val : int
        ~ ListNode()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct_basic.tenth {
    class cn.shui.learning_plan.datastruct_basic.tenth.L2 {
        + addTwoNumbers1()
        + addTwoNumbers2()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct_basic.tenth {
    class cn.shui.learning_plan.datastruct_basic.tenth.L2.ListNode {
        ~ val : int
        ~ ListNode()
        ~ ListNode()
        ~ ListNode()
    }
  }
  

  cn.shui.learning_plan.datastruct_basic.tenth.L142 +-down- cn.shui.learning_plan.datastruct_basic.tenth.L142.ListNode
  cn.shui.learning_plan.datastruct_basic.tenth.L142.ListNode o-- cn.shui.learning_plan.datastruct_basic.tenth.L142.ListNode : next
  cn.shui.learning_plan.datastruct_basic.tenth.L2 +-down- cn.shui.learning_plan.datastruct_basic.tenth.L2.ListNode
  cn.shui.learning_plan.datastruct_basic.tenth.L2.ListNode o-- cn.shui.learning_plan.datastruct_basic.tenth.L2.ListNode : next


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
